cabal-version:      3.0
name:               AuditChain
version:            0.1.0.0
build-type:         Simple
author:             Harini P

common warnings
    ghc-options: -Wall

executable AuditChain
    import:           warnings
    main-is:          Main.hs
    
    -- Modules included in your project
    other-modules:    
        Types, 
        Hash, 
        Ledger, 
        Persist, 
        Report

    -- External libraries required for SHA-256, JSON, and UUIDs
    build-depends:    
        base ^>=4.18.3.0,
        text,
        time,
        bytestring,
        cryptohash-sha256,
        base16-bytestring,
        aeson,
        directory,
        filepath,
        uuid

    -- This tells Cabal your files are in the main folder
    hs-source-dirs:   .
    default-language: Haskell2010